Bug 180995 nsStatusBarBiffManager::~nsStatusBarBiffManager() unconditionally releases a null member r=sspitzer sr=bz